# scala

./: .gitignore
dsl-demo/: build.sbt
dsl-demo/src/main/scala/: JsonExpr.scala  ParseExpr.scala
http_demo/: README.md  build.sbt
http_demo/src/main/scala/: ScalatraBootstrap.scala
http_demo/src/main/scala/io/sj/http_demo/: Http_demoStack.scala  SanServlet.scala  StreamingServlet.scala
http_demo/src/test/scala/io/sj/http_demo/: SanServletSpec.scala
javagc/: GCObj.java  GCTest.java  runme.sh
jobserver_streamer/: build.sbt  cmds
jobserver_streamer/project/: Dependencies.scala  Versions.scala
jobserver_streamer/src/main/scala/io/sj/streamer/: CreateStream.scala  StructuredStream.scala  WordCountExample.scala
jobserver_streamer/src/test/scala/io/sj/streamer/: WordCountExampleSpec.scala
lucene_poc/: pom.xml
lucene_poc/c_api/: .gitignore  CMakeLists.txt  lucene_caller.cpp
lucene_poc/src/main/java/io/sj/lucene/: HelloLucene.java
misc/: chunking_func.scala  lrucache.scala  tree.scala
misc/others/: Tree.scala
spark_extensions/: README.md  build.sbt
spark_extensions/custom_executor/: README.md  README.txt  build.sbt  runme.sh
spark_extensions/custom_executor/project/: assembly.sbt
spark_extensions/docs/: links.txt
spark_extensions/memory_manager/: README.md
spark_extensions/new_command/: README.md  build.sbt  runme.sh
spark_extensions/new_repl/: README.md  README.txt  build.sbt  runme.sh
spark_extensions/webui/: README.md  build.sbt
sparkstream/: build.sbt  runme.sh
sparkstream/src/main/scala/io/sj/stream/: Stream1.scala
(+18 files in other folders)
